<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abdsh.studenthelper.StopwatchFragment">

    <TextView
        android:id="@+id/textViewTimeRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="serif"
        android:text="1:23:45"
        android:textSize="72sp" />

    <Button
        android:id="@+id/TbuttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTimeRemaining"
        android:layout_toLeftOf="@+id/TbuttonStop"
        android:layout_centerHorizontal="true"
        android:text="@string/button_start" />

    <Button
        android:id="@+id/TbuttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTimeRemaining"
        android:layout_centerHorizontal="true"
        android:text="@string/button_stop" />

    <Button
        android:id="@+id/TbuttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTimeRemaining"
        android:layout_toRightOf="@id/TbuttonStop"
        android:layout_centerHorizontal="true"
        android:text="@string/button_reset" />
    <Button
        android:id="@+id/Tadd50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewTimeRemaining"
        android:layout_centerHorizontal="true"
        android:text="@string/T_Add_50" />
    <Button
        android:id="@+id/Tadd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/textViewTimeRemaining"
        android:layout_toRightOf="@id/Tadd50"
        android:layout_centerHorizontal="true"
        android:text="@string/T_Add_2" />
    <Button
        android:id="@+id/Tadd10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/textViewTimeRemaining"
        android:layout_toLeftOf="@id/Tadd50"
        android:layout_centerHorizontal="true"
        android:text="@string/T_Add_10" />
    <Button
        android:id="@+id/Tbuttonclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TbuttonStop"
        android:layout_centerHorizontal="true"
        android:text="@string/T_Clear" />



</RelativeLayout>