<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/sched_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <FrameLayout
        android:id="@+id/sched_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/day1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Monday"
        android:textSize="20sp"
        android:layout_below="@+id/sched_toolbar"/>
    <TextView
        android:id="@+id/Tday1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/day1"/>
    <TextView
        android:id="@+id/day2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tuesday"
        android:textSize="20sp"
        android:layout_below="@+id/Tday1"/>
    <TextView
        android:id="@+id/Tday2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/day2"/>
    <TextView
        android:id="@+id/day3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wednesday"
        android:textSize="20sp"
        android:layout_below="@+id/Tday2"/>
    <TextView
        android:id="@+id/Tday3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/day3"/>
    <TextView
        android:id="@+id/day4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Thursday"
        android:textSize="20sp"
        android:layout_below="@+id/Tday3"/>
    <TextView
        android:id="@+id/Tday4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/day4"/>
    <TextView
        android:id="@+id/day5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Friday"
        android:textSize="20sp"
        android:layout_below="@+id/Tday4"/>
    <TextView
        android:id="@+id/Tday5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@+id/day5"/>


</RelativeLayout>