<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abdsh.studenthelper.StopwatchFragment">

    <TextView
        android:id="@+id/textViewTimePassed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="serif"
        android:text="1:23:45"
        android:textSize="72sp" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTimePassed"
        android:layout_toLeftOf="@+id/buttonStop"
        android:layout_centerHorizontal="true"
        android:text="@string/button_start" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTimePassed"
        android:layout_centerHorizontal="true"
        android:text="@string/button_stop" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTimePassed"
        android:layout_toRightOf="@id/buttonStop"
        android:layout_centerHorizontal="true"
        android:text="@string/button_reset" />



</RelativeLayout>